# saplangchain-proxy

./: .gitignore  README.md  pyproject.toml
sap/: sapwrapper.py
sap/chat/: openai.py
sap/embeddings/: openai.py
sap/llm/: openai.py
sap/tools/: sapservices.py
src/saplangchainproxy/: __init__.py
src/saplangchainproxy/chat/: __init__.py  openai.py
src/saplangchainproxy/embeddings/: __init__.py  openai.py
src/saplangchainproxy/llm/: __init__.py  openai.py
src/saplangchainproxy/tests/: test_proxy.py  test_streaming.py
